--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,23 @@ dist.jar=${dist.dir}/PF6S-maxitoners.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.sqlite-jdbc-3.34.0.jar=lib/sqlite-jdbc-3.34.0.jar
+file.reference.gson-2.8.5.jar=lib\\gson-2.8.5.jar
+file.reference.kotlin-stdlib-1.3.50.jar=lib\\kotlin-stdlib-1.3.50.jar
+file.reference.okhttp-4.9.1.jar=lib\\okhttp-4.9.1.jar
+file.reference.okio-2.9.0.jar=lib\\okio-2.9.0.jar
+file.reference.retrofit-2.9.0.jar=lib\\retrofit-2.9.0.jar
+file.reference.retrofit-converter-gson-2.9.0.jar=lib\\retrofit-converter-gson-2.9.0.jar
+file.reference.sqlite-jdbc-3.34.0.jar=lib\\sqlite-jdbc-3.34.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqlite-jdbc-3.34.0.jar}
+    ${file.reference.sqlite-jdbc-3.34.0.jar}:\
+    ${file.reference.okhttp-4.9.1.jar}:\
+    ${file.reference.retrofit-2.9.0.jar}:\
+    ${file.reference.gson-2.8.5.jar}:\
+    ${file.reference.retrofit-converter-gson-2.9.0.jar}:\
+    ${file.reference.kotlin-stdlib-1.3.50.jar}:\
+    ${file.reference.okio-2.9.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -58,6 +70,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -66,6 +79,8 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=PF6S-maxitoners
 main.class=mx.maxitoners.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
